[tool.poetry]
name = "repl_python3_beta_Crypvexa"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ask-sdk-core = "^1.16.1"
Flask = "^2.0.1"
flask-ask-sdk = "^1.0.0"
feedparser = "^6.0.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
